<resources>
    <string name="app_name">8 Spanish  Words</string>
    <string name="who">Who</string>
    <string name="where">Where</string>
    <string name="what">What</string>
    <string name="when">When</string>
    <string name="how">How</string>
    <string name="good_night">Good Night</string>
    <string name="why">Why</string>
    <string name="good_morning">Good Morning</string>
    <string name="who1">Who1</string>
</resources>
