<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chesnowitz.a8spanishwords.MainActivity">

    <GridLayout
        android:id="@+id/girdLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="74dp"
        android:layout_marginTop="135dp"
        tools:ignore="RtlHardcoded">

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/who"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="Who"
            tools:ignore="HardcodedText" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/what"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="1"
            android:text="@string/what" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:text="@string/where" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/when"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="2"
            android:text="@string/when" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/why"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:text="@string/why" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/how"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="3"
            android:text="@string/how" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/morning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:text="@string/good_morning" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/night"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="4"
            android:text="@string/good_night" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/null1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_row="5"
            android:text=""
            android:visibility="invisible" />

        <Button
            android:onClick="buttonClicked"
            android:id="@+id/null2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_row="5"
            android:text=""
            android:visibility="gone" />
    </GridLayout>
</android.support.constraint.ConstraintLayout>
